--- a/core/modules/install/uri/install/text.po
+++ b/core/modules/install/uri/install/text.po
@@ -37,56 +37,56 @@ msgstr "Could not write to data directory. Please review ownership and permissio
 msgid "require_data_dir"
 msgstr "Could not create directory structure. Please review ownership and permissions."
 
-msgid = "requirements_fail"
-msgstr = "Sorry, your system does not yet meet all the requirements to install [app-name]:"
+msgid "requirements_fail"
+msgstr "Sorry, your system does not yet meet all the requirements to install [app-name]:"
 
-msgid = "requirements_pass"
-msgstr = "Your system meets all requirements for installing [app-name]. Click next to continue."
+msgid "requirements_pass"
+msgstr "Your system meets all requirements for installing [app-name]. Click next to continue."
 
-msgid = "form_error"
-msgstr = "Please fill in "
+msgid "form_error"
+msgstr "Please fill in "
 
-msgid = "email_required"
-msgstr = "Please fill in an email for administrating [app-name]"
+msgid "email_required"
+msgstr "Please fill in an email for administrating [app-name]"
 
-msgid = "password_required"
-msgstr = "Please type in a password"
+msgid "password_required"
+msgstr "Please type in a password"
 
-msgid = "passwords_no_match"
-msgstr = "The passwords do not match. Please enter the same password twice."
+msgid "passwords_no_match"
+msgstr "The passwords do not match. Please enter the same password twice."
 
-msgid = "help_rewritebase"
-msgstr = "If Apache is hosting [app-name] with an alias, please enter it here. Otherwise, leave this field blank."
+msgid "help_rewritebase"
+msgstr "If Apache is hosting [app-name] with an alias, please enter it here. Otherwise, leave this field blank."
 
-msgid = "help_pepper"
-msgstr = "The pepper code is a system wide security code, unique for this installation."
+msgid "help_pepper"
+msgstr "The pepper code is a system wide security code, unique for this installation."
 
-msgid = "pepper_required"
-msgstr = "Please type in a pepper code."
+msgid "pepper_required"
+msgstr "Please type in a pepper code."
 
-msgid = "htaccess_created_ok"
-msgstr = "Successfully configured main htaccess file."
+msgid "htaccess_created_ok"
+msgstr "Successfully configured main htaccess file."
 
-msgid = "htaccess_created_fail"
-msgstr = "Could not create or overwrite htaccess file. Please configure the htaccess file manually."
+msgid "htaccess_created_fail"
+msgstr "Could not create or overwrite htaccess file. Please configure the htaccess file manually."
 
-msgid = "readme_created_ok"
-msgstr = "Successfully created readme.md file"
+msgid "readme_created_ok"
+msgstr "Successfully created readme.md file"
 
-msgid = "readme_created_fail"
-msgstr = "Could not create or overwrite readme file. Please create or modify the file manually."
+msgid "readme_created_fail"
+msgstr "Could not create or overwrite readme file. Please create or modify the file manually."
 
-msgid = "gitignore_created_ok"
-msgstr = "Successfully created gitignore file"
+msgid "gitignore_created_ok"
+msgstr "Successfully created gitignore file"
 
-msgid = "gitignore_created_fail"
-msgstr = "Could not create or overwrite gitignore file. Please create or modify the file manually."
+msgid "gitignore_created_fail"
+msgstr "Could not create or overwrite gitignore file. Please create or modify the file manually."
 
-msgid = "user_created_ok"
-msgstr = "Created admin account with email <strong>[get sticky.email]</strong>."
+msgid "user_created_ok"
+msgstr "Created admin account with email <strong>[get sticky.email]</strong>."
 
-msgid = "user_created_fail"
-msgstr = "Could not create admin account. Please review file writing permissions to data directory."
+msgid "user_created_fail"
+msgstr "Could not create admin account. Please review file writing permissions to data directory."
 
-msgid = "step3_proceed"
-msgstr = "Click Next to continue."
+msgid "step3_proceed"
+msgstr "Click Next to continue."
